--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -93,5 +93,6 @@ run.test.classpath=\
 run.test.modulepath=\
     ${javac.test.modulepath}
 source.encoding=UTF-8
+src.berry.dir=berry
 src.dir=src
 test.src.dir=test
