--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,7 +29,7 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Tasmota_NSPanel_Display_Firmware_Upload.jar
+dist.jar=${dist.dir}/ns-flash.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Tasmota_NSPanel_Display_Firmware_Upload
